--- a/gestion_utilisateurs.html
+++ b/gestion_utilisateurs.html
@@ -5,72 +5,124 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestion des Utilisateurs</title>
     <style>
-        body { font-family: sans-serif; margin: 20px; background-color: #f4f4f4; }
-        .container { max-width: 960px; margin: 20px auto; padding: 20px; background-color: #fff; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); }
-        h1 { text-align: center; color: #333; margin-bottom: 30px; }
-        h2 { color: #555; margin-top: 30px; margin-bottom: 15px; border-bottom: 1px solid #eee; padding-bottom: 10px; }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f3f4f6;
+            color: #333;
+        }
+        .container {
+            max-width: 960px;
+            margin: 30px auto;
+            padding: 30px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            text-align: center;
+            color: #2d3748;
+            margin-bottom: 30px;
+        }
+        h2 {
+            color: #4a5568;
+            margin-top: 30px;
+            margin-bottom: 15px;
+            border-bottom: 2px solid #edf2f7;
+            padding-bottom: 10px;
+        }
         .form-grid {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 15px;
-            margin-bottom: 20px;
+            gap: 20px;
+            margin-bottom: 30px;
         }
-        label { display: block; margin-bottom: 5px; color: #333; font-weight: bold; }
+        label {
+            display: block;
+            margin-bottom: 8px;
+            color: #4a5568;
+            font-weight: 500;
+        }
         input[type="text"], input[type="password"] {
             width: 100%;
-            padding: 10px;
-            margin-bottom: 10px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
+            padding: 12px;
+            margin-bottom: 15px;
+            border: 1px solid #cbd5e0;
+            border-radius: 6px;
             box-sizing: border-box;
+            font-size: 1rem;
         }
         button {
-            background-color: #007bff;
+            background-color: #4299e1;
             color: white;
-            padding: 10px 15px;
+            padding: 12px 20px;
             border: none;
             border-radius: 6px;
             cursor: pointer;
-            font-size: 1em;
-            transition: background-color 0.3s ease;
+            font-size: 1rem;
+            transition: background-color 0.2s ease-in-out;
         }
         button:hover {
-            background-color: #0056b3;
+            background-color: #2b6cb0;
         }
-        #message, #error { margin-top: 15px; font-weight: bold; text-align: center; }
-        #message { color: green; }
-        #error { color: red; }
-        .user-list-container { margin-top: 30px; }
+        #message, #error {
+            margin-top: 20px;
+            font-weight: bold;
+            text-align: center;
+        }
+        #message {
+            color: #48bb78;
+        }
+        #error {
+            color: #e53e3e;
+        }
+        .user-list-container {
+            margin-top: 40px;
+        }
         .user-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 10px;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 15px;
             list-style-type: none;
             padding: 0;
         }
         .user-item {
-            background-color: #e9ecef;
-            padding: 10px 15px;
+            background-color: #edf2f7;
+            padding: 15px 20px;
             border-radius: 6px;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
+        .user-item span {
+            font-weight: 500;
+            color: #2d3748;
+        }
         .user-item button {
-            background-color: #dc3545;
+            background-color: #e53e3e;
             color: white;
             padding: 8px 12px;
             border: none;
             border-radius: 4px;
             cursor: pointer;
-            font-size: 0.9em;
-            transition: background-color 0.3s ease;
+            font-size: 0.9rem;
+            transition: background-color 0.2s ease-in-out;
         }
         .user-item button:hover {
-            background-color: #c82333;
+            background-color: #c53030;
         }
-        .back-link { display: block; margin-top: 20px; text-align: center; color: blue; text-decoration: none; }
-        .back-link:hover { text-decoration: underline; }
+        .back-link {
+            display: block;
+            margin-top: 30px;
+            text-align: center;
+            color: #4299e1;
+            text-decoration: none;
+            font-weight: 500;
+        }
+        .back-link:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -135,7 +187,9 @@
                     users.forEach(user => {
                         const listItem = document.createElement('li');
                         listItem.classList.add('user-item');
-                        listItem.textContent = `${user.username} (${user.prenom})`;
+                        const userInfo = document.createElement('span');
+                        userInfo.textContent = `${user.username} (${user.prenom})`;
+                        listItem.appendChild(userInfo);
                         const deleteButton = document.createElement('button');
                         deleteButton.textContent = 'Supprimer';
                         deleteButton.onclick = () => deleteUser(user.username);
