changmnt page_accueil.html

--- a/gestion_utilisateurs.html
+++ b/gestion_utilisateurs.html
@@ -161,7 +161,7 @@
     <script>
         async function checkUserAccess() {
             const loggedInUsername = localStorage.getItem('username');
-            const authorizedUsers = ['administrateur', 'salome.boudeau', 'gregory.houy', "amaury.anfraypavy"]; // Liste des utilisateurs autorisés
+            const authorizedUsers = ['administrateur', 'salome.boudeau', 'gregory.houy', "amaury.anfraypavy", "ewan.kervellec"]; // Liste des utilisateurs autorisés
 
             if (!loggedInUsername) {
                 alert("Vous devez être connecté pour accéder à cette page.");
